Revision history for DBIx::Class

        - rewritten collapse_result to fix prefetch
        - moved populate to resultset
        - added support for creation of related rows via insert and populate
        - Added Oracle/WhereJoins.pm for Oracle >= 8 to support
          Oracle <= 9i, and provide Oracle with a better join method for
          later versions.  (I use the term better loosely.)
        - select et al weren't properly detecing when the server connection
          had timed out when not in a transaction
        - The SQL::T parser class now respects a relationship attribute of
          is_foreign_key_constrain to allow explicit control over wether or
          not a foreign constraint is needed
        - resultset_class/result_class now (again) auto loads the specified
          class; requires Class::Accessor::Grouped 0.05002+
        - added 97result_class.t test, failing ATM
        - added get_inflated_columns to Row
        - %colinfo accessor and inflate_column now work together

0.07006 2007-04-17 23:18:00
        - Lots of documentation updates
        - deploy now takes an optional 'source_names' parameter (dec)
        - Quoting for for columns_info_for
        - RT#25683 fixed (multiple open sths on DBD::Sybase)
        - CDBI compat infers has_many from has_a (Schwern)
        - Fix ddl_filename transformation (Carl Vincent)

0.07999_02 2007-01-25 20:11:00
        - add support for binding BYTEA and similar parameters (w/Pg impl)
        - add support to Ordered for multiple ordering columns
        - mark DB.pm and compose_connection as deprecated
        - switch tests to compose_namespace
        - ResltClass::HashRefInflator added
        - Changed row and rs objects to not have direct handle to a source,
          instead a (schema,source_name) tuple of type ResultSourceHandle

0.07005 2007-01-10 18:36:00
        - fixup changes file
        - remove erroneous .orig files - oops

0.07004 2007-01-09 21:52:00